--- a/index.html
+++ b/index.html
@@ -2,19 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Portfólio </title>
-    <link rel="stylesheet" href="CSS/stylee.css" />
-    <script defer src="JS/script.js"></script>
+    <meta name="viewport" content="width=    <div id="container">
+     <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/Script.js"></script>   
+        <title>Document</title>
 </head>
 <body>
-    <div id = "container">
-        <div id="profile">
-            <img
-                class="profile-photo"
-                src="IMG/jandrei.png"
-    />
-    <p> @passosTzk </p>
+            <div id="profile">
+            <img 
+                class="profile-photo" 
+                src="IMG/cou.png" 
+                alt="Foto de homem com terno preto e camisa vermelha, barba e fundo vermelho." 
+            />
+            <p> Fabricio Passos </p>
+        </div>
+
+        <div id="switch" onclick="toggleMode()">
+            <button></button>
+            <span></span>
+        </div>
+
+        <ul>
+            <li>
+                <a href="#">Um pouco mais sobre mim</a>
+            </li>
+            <li>
+                <a href="#">Baixar currículo</a>
+            </li>
+            <li>
+                <a href="https://github.com/passos471" target="_blank">Ver meu portfólio</a>
+            </li>
+            <li>
+                <a href="#" target="_blank">Projetos Realizados</a>
+            </li>
+        </ul>
+
+        <div id="social-links">
+            <a href="https://github.com/passos471" target="_blank">
+                <ion-icon name="logo-github"></ion-icon>
+            </a>
+            <a href="https://www.instagram.com/passostzk/" target="_blank">
+                <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+            <a href="https://youtube.com/" target="_blank">
+                <ion-icon name="logo-youtube"></ion-icon>
+            </a>
+        </div>
+
+        <footer>
+            Feito com ❤️ junto com os alunos da 
+            <a href="https://www.eteceembu.com.br/">Etec de Embu</a>
+        </footer>
     </div>
+    <script src="https://unpkg.com/ionicons@5.1.0/dist/ionicons.js">
 </body>
 </html>
