--- a/index.html
+++ b/index.html
@@ -7,53 +7,53 @@
     <script defer src="js/Script.js"></script>   
         <title>Document</title>
 </head>
-<body>
-            <div id="profile">
-            <img 
-                class="profile-photo" 
-                src="IMG/cou.png" 
-                alt="Foto de homem com terno preto e camisa vermelha, barba e fundo vermelho." 
-            />
-            <p> Fabricio Passos </p>
-        </div>
+    <body>
+                <div id="profile">
+                <img 
+                 class="profile-photo" 
+                    src="IMG/cou.png" 
+                    alt="Foto de homem com terno preto e camisa vermelha, barba e fundo vermelho." 
+                />
+                <p> Fabricio Passos </p>
+            </div>
 
-        <div id="switch" onclick="toggleMode()">
-            <button></button>
-            <span></span>
-        </div>
+            <div id="switch" onclick="toggleMode()">
+                <button></button>
+                <span></span>
+            </div>
 
-        <ul>
-            <li>
-                <a href="#">Um pouco mais sobre mim</a>
-            </li>
-            <li>
-                <a href="#">Baixar currículo</a>
-            </li>
-            <li>
-                <a href="https://github.com/passos471" target="_blank">Ver meu portfólio</a>
-            </li>
-            <li>
-                <a href="#" target="_blank">Projetos Realizados</a>
-            </li>
-        </ul>
+            <ul>
+                <li>
+                 <a href="#">Um pouco mais sobre mim</a>
+                </li>
+                <li>
+                    <a href="#">Baixar currículo</a>
+                </li>
+                <li>
+                    <a href="https://github.com/passos471" target="_blank">Ver meu portfólio</a>
+                </li>
+             <li>
+                    <a href="#" target="_blank">Projetos Realizados</a>
+                </li>
+            </ul>
 
-        <div id="social-links">
-            <a href="https://github.com/passos471" target="_blank">
-                <ion-icon name="logo-github"></ion-icon>
-            </a>
-            <a href="https://www.instagram.com/passostzk/" target="_blank">
+            <div id="social-links">
+                <a href="https://github.com/passos471" target="_blank">
+                    <ion-icon name="logo-github"></ion-icon>
+                </a>
+                <a href="https://www.instagram.com/passostzk/" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-            <a href="https://youtube.com/" target="_blank">
+                </a>
+                <a href="https://youtube.com/" target="_blank">
                 <ion-icon name="logo-youtube"></ion-icon>
-            </a>
-        </div>
+                </a>
+            </div>
 
-        <footer>
+            <footer>
             Feito com ❤️ junto com os alunos da 
-            <a href="https://www.eteceembu.com.br/">Etec de Embu</a>
-        </footer>
-    </div>
-    <script src="https://unpkg.com/ionicons@5.1.0/dist/ionicons.js">
-</body>
+             <a href="https://www.eteceembu.com.br/">Etec de Embu</a>
+            </footer>
+        </div>
+        <script src="https://unpkg.com/ionicons@5.1.0/dist/ionicons.js"></script>
+    </body>
 </html>
