--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <img 
                  class="profile-photo" 
                     src="IMG/cou.png" 
-                    alt="Foto de homem com terno preto e camisa vermelha, barba e fundo vermelho." 
+                    alt="..." 
                 />
                 <p> Fabricio Passos </p>
             </div>
